--- a/index.css
+++ b/index.css
@@ -1,8 +1,59 @@
+@font-face {
+    font-family: "CursedTimerUlil";
+    src: url("/CursedTimerUlil-Aznm.ttf") format("ttf"), url("/CursedTimerUlil-Aznm.ttf")
+        format("ttf");
+  }
+
 body {
     margin: 0;
+    font-family: 'CursedTimerUlil-Aznm';
+    background: #1b244a;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
+h3{
+    color: white;
+    display: flex;
+    justify-content: center;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 36px;
+    width: 149px;
+    height: 36px;
+    margin-bottom: 10px;
+}
+
+h2{
+    margin: 0px 0px 26px 0px;
+}
 .container {
     display: flex;
     justify-content: space-around;
+}
+
+.column {
+
+}
+.score {
+    width: 155px;
+    height: 120px;
+    font-size: 90px;
+    text-align: center;
+    background: #080001;
+    color:#F94F6D;
+}
+
+button {
+    background: none;
+    border: 2px solid #9AABD8;
+    border-radius: 5px;
+    width: 45px;
+    height: 45px;
+    margin-right: 9px;
+}
+
+.numbers {
+    color: #9AABD8;
 }
