--- a/index.css
+++ b/index.css
@@ -1,8 +1,5 @@
-@font-face {
-    font-family: "CursedTimerUlil";
-    src: url("/CursedTimerUlil-Aznm.ttf") format("ttf"), url("/CursedTimerUlil-Aznm.ttf")
-        format("ttf");
-  }
+@font-face { font-family: CursedTimerUlil-Aznm; 
+    src: url('/CursedTimerUlil-Aznm.ttf'); } 
 
 body {
     margin: 0;
@@ -23,6 +20,7 @@ h3{
     width: 149px;
     height: 36px;
     margin-bottom: 10px;
+    font-family: Verdana, sans-serif;
 }
 
 h2{
@@ -33,6 +31,7 @@ h2{
     text-align: center;
     background: #080001;
     color:#F94F6D;
+    line-height: 126px;
 }
 .container {
     display: flex;
@@ -50,16 +49,25 @@ button {
     cursor: pointer;
 }
 
+#button3 {
+    margin-right: 40px;
+}
 button:active {
     transform: translateY(4px);
-}
-
-
-.numbers {
-    color: #9AABD8;
 }
 
 button:hover {
     
 
+}
+
+.numbers {
+    color: #9AABD8;
+}
+
+#reset-btn {
+    display: flex;
+    align-items: center;
+    width: 40%;
+    margin-top: 20px;
 }
